cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_334.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/set_key.c:312: error: DEAD_STORE
  The value written to &in (type unsigned char const *) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/set_key.c:312:5: Write of unused value
310.   
311.       c2l(in, c);
312.       c2l(in, d);
           ^
313.   
314.       /*
